# st_template

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci_cron_weekly.yml  ci_workflows.yml
docs/: conf.py  index.rst
docs/packagename/: index.rst  install.rst  usage.rst
packagename/: __init__.py  example_mod.py
packagename/tests/: test_example.py
